Closed
Bug 401169
Opened 18 years ago
Closed 18 years ago
Crash [@ RtlAllocateHeap] when javascript turned off and noscript, table, script, title
Categories
(Core :: DOM: HTML Parser, defect, P3)
Tracking
()
VERIFIED
FIXED
People
(Reporter: martijn.martijn, Assigned: mrbkap)
References
Details
(Keywords: crash, regression, testcase)
Crash Data
Attachments
(2 files)
|
34 bytes,
text/html
|
Details | |
|
1.10 KB,
patch
|
sicking
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
See testcase, which crashes current trunk build when javascript is turned off.
This regressed between 2007-06-22 and 2007-06-23, regression from bug 379025.
http://crash-stats.mozilla.com/report/index/8017267a-834d-11dc-a6fa-001a4bd43ed6
0 RtlAllocateHeap
1 msvcr80.dll@0x4d82
Flags: blocking1.9?
| Assignee | ||
Comment 1•18 years ago
|
||
I should have done this so long ago! This patch makes us not bother collecting misplaced content in the head. This means that we throw out content. But you really, *really*, shouldn't be doing this anyway, so I don't care that much.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #286227 -
Flags: superreview?
Attachment #286227 -
Flags: review?(jonas)
| Assignee | ||
Updated•18 years ago
|
Attachment #286227 -
Flags: superreview? → superreview?(jst)
Updated•18 years ago
|
Attachment #286227 -
Flags: superreview?(jst) → superreview+
Updated•18 years ago
|
Flags: blocking1.9? → blocking1.9+
Attachment #286227 -
Flags: review?(jonas) → review+
Priority: -- → P3
| Assignee | ||
Comment 2•18 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 3•18 years ago
|
||
Verified fixed, using:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007112805 Minefield/3.0b2pre
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Crash Signature: [@ RtlAllocateHeap]
You need to log in
before you can comment on or make changes to this bug.
Description
•