Don't deal with misplaced content when we're in the head. bug 401169, r=sicking sr=jst a=blocking-1.9